--- a/DayTrader/DayTrader.csproj
+++ b/DayTrader/DayTrader.csproj
@@ -15,6 +15,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OtterGuiInternal\OtterGuiInternal.csproj" />
   </ItemGroup>
 </Project>
